--- a/Report/cs590_project_report_zs144.tex
+++ b/Report/cs590_project_report_zs144.tex
@@ -64,7 +64,7 @@
 	\lipsum[3]
 	
 	
-	\section{Theoratical Analysis}
+	\section{Theoretical Analysis}
 	\label{sec:headings}
 	
 	\lipsum[4] See Section \ref{sec:headings}.
