--- a/Report/references.bib
+++ b/Report/references.bib
@@ -1,25 +1,9 @@
-@inproceedings{kour2014real,
-	title={Real-time segmentation of on-line handwritten arabic script},
-	author={Kour, George and Saabne, Raid},
-	booktitle={Frontiers in Handwriting Recognition (ICFHR), 2014 14th International Conference on},
-	pages={417--422},
-	year={2014},
-	organization={IEEE}
-}
-
-@inproceedings{kour2014fast,
-	title={Fast classification of handwritten on-line Arabic characters},
-	author={Kour, George and Saabne, Raid},
-	booktitle={Soft Computing and Pattern Recognition (SoCPaR), 2014 6th International Conference of},
-	pages={312--318},
-	year={2014},
-	organization={IEEE},
-	doi={10.1109/SOCPAR.2014.7008025}
-}
-
-@article{hadash2018estimate,
-	title={Estimate and Replace: A Novel Approach to Integrating Deep Neural Networks with Existing Applications},
-	author={Hadash, Guy and Kermany, Einat and Carmeli, Boaz and Lavi, Ofer and Kour, George and Jacovi, Alon},
-	journal={arXiv preprint arXiv:1804.09028},
-	year={2018}
+@article{neville2008bias,
+	title={A bias/variance decomposition for models using collective inference},
+	author={Neville, Jennifer and Jensen, David},
+	journal={Machine Learning},
+	volume={73},
+	pages={87--106},
+	year={2008},
+	publisher={Springer}
 }
