--- a/Report/references.bib
+++ b/Report/references.bib
@@ -7,3 +7,95 @@
 	year={2008},
 	publisher={Springer}
 }
+
+@book{hastie2009elements,
+	title={The elements of statistical learning: data mining, inference, and prediction},
+	author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome H and Friedman, Jerome H},
+	volume={2},
+	year={2009},
+	publisher={Springer}
+}
+
+@article{belkin2019reconciling,
+	title={Reconciling modern machine-learning practice and the classical bias--variance trade-off},
+	author={Belkin, Mikhail and Hsu, Daniel and Ma, Siyuan and Mandal, Soumik},
+	journal={Proceedings of the National Academy of Sciences},
+	volume={116},
+	number={32},
+	pages={15849--15854},
+	year={2019},
+	publisher={National Acad Sciences}
+}
+
+@article{zhang2021understanding,
+	title={Understanding deep learning (still) requires rethinking generalization},
+	author={Zhang, Chiyuan and Bengio, Samy and Hardt, Moritz and Recht, Benjamin and Vinyals, Oriol},
+	journal={Communications of the ACM},
+	volume={64},
+	number={3},
+	pages={107--115},
+	year={2021},
+	publisher={ACM New York, NY, USA}
+}
+
+@article{nakkiran2019more,
+	title={More data can hurt for linear regression: Sample-wise double descent},
+	author={Nakkiran, Preetum},
+	journal={arXiv preprint arXiv:1912.07242},
+	year={2019}
+}
+
+@article{nakkiran2021deep,
+	title={Deep double descent: Where bigger models and more data hurt},
+	author={Nakkiran, Preetum and Kaplun, Gal and Bansal, Yamini and Yang, Tristan and Barak, Boaz and Sutskever, Ilya},
+	journal={Journal of Statistical Mechanics: Theory and Experiment},
+	volume={2021},
+	number={12},
+	pages={124003},
+	year={2021},
+	publisher={IOP Publishing}
+}
+
+@article{Bartlett_Long_Lugosi_Tsigler_2019,   title={Benign Overfitting in Linear Regression},  journal={arXiv: Machine Learning,arXiv: Machine Learning},  author={Bartlett, PeterL. and Long, PhilipM. and Lugosi, Gábor and Tsigler, Alexander},  year={2019},  month={Jun},  language={en-US}  }
+
+@article{Muthukumar_Vodrahalli_Subramanian_Sahai_2019,   title={Harmless interpolation of noisy data in regression},  journal={Cornell University - arXiv,Cornell University - arXiv},  author={Muthukumar, Vidya and Vodrahalli, Kailas and Subramanian, Vignesh and Sahai, Anant},  year={2019},  month={Mar},  language={en-US}  }
+
+@article{Mitra_2019,   title={Understanding overfitting peaks in generalization error: Analytical risk curves for l 2 and l 1 penalized interpolation.},  journal={arXiv: Learning,arXiv: Learning},  author={Mitra, ParthaP.},  year={2019},  month={Jun},  language={en-US}  }
+
+@article{Mei_Montanari_2022,   title={The Generalization Error of Random Features Regression: Precise Asymptotics and the Double Descent Curve},  url={http://dx.doi.org/10.1002/cpa.22008},  DOI={10.1002/cpa.22008},  journal={Communications on Pure and Applied Mathematics},  author={Mei, Song and Montanari, Andrea},  year={2022},  month={Mar},  pages={667–766},  language={en-US}  }
+
+@article{Liang_Rakhlin_2020,   title={Just Interpolate: Kernel “Ridgeless” Regression Can Generalize},  url={http://dx.doi.org/10.1214/19-aos1849},  DOI={10.1214/19-aos1849},  journal={The Annals of Statistics},  author={Liang, Tengyuan and Rakhlin, Alexander},  year={2020},  month={May},  language={en-US}  }
+
+@article{Derezinski_Liang_Mahoney_2019,   title={Exact expressions for double descent and implicit regularization via surrogate random design},  journal={Cornell University - arXiv,Cornell University - arXiv},  author={Derezinski, Michal and Liang, FeynmanT. and Mahoney, MichaelW.},  year={2019},  month={Dec},  language={en-US}  }
+
+@inproceedings{d2020double,
+	title={Double trouble in double descent: Bias and variance (s) in the lazy regime},
+	author={d’Ascoli, St{\'e}phane and Refinetti, Maria and Biroli, Giulio and Krzakala, Florent},
+	booktitle={International Conference on Machine Learning},
+	pages={2280--2290},
+	year={2020},
+	organization={PMLR}
+}
+
+@article{baldassi2021unveiling,
+	title={Unveiling the structure of wide flat minima in neural networks},
+	author={Baldassi, Carlo and Lauditi, Clarissa and Malatesta, Enrico M and Perugini, Gabriele and Zecchina, Riccardo},
+	journal={Physical Review Letters},
+	volume={127},
+	number={27},
+	pages={278301},
+	year={2021},
+	publisher={APS}
+}
+
+@article{hastie2022surprises,
+	title={Surprises in high-dimensional ridgeless least squares interpolation},
+	author={Hastie, Trevor and Montanari, Andrea and Rosset, Saharon and Tibshirani, Ryan J},
+	journal={Annals of statistics},
+	volume={50},
+	number={2},
+	pages={949},
+	year={2022},
+	publisher={NIH Public Access}
+}
+
