--- a/Report/cs590_project_report_zs144.tex
+++ b/Report/cs590_project_report_zs144.tex
@@ -163,8 +163,9 @@ Both experiments are run on a Macbook Pro 2020 with Intel Core i5 CPU. The code 
 Let's first look at the results of experiment 1 shown in Figure \ref{fig:1}. The right subplot is the theoretical results we derived by the expression in Section \ref{analysis}. When $n > 200$ (the under-parameterized regime), the test risk increases with less training data (the ratio $n/d$ is decreasing). The test risk diverges to $\infty$ as the ratio approaches $1^+$. Then, we will fall into the over-parameterized regime ($n \leq 200$), starting from an infinite test risk. As we keep reducing the number of samples, the test risk soon drops to a local minimum (between $n=100$ and $n=150$), and finally, it slowly grows back again and reaches $1$ when $n = 0$ (random guess). We also paint the areas representing the bias term and variance term under the test risk curve. This tells us that the non-monotonicity of test risk comes from the non-monotonicity of variance, which decreases, then increases, and then decreases again after the interpolation threshold ($n = d = 200$). Before we proceed to compare the theoretical results with the simulation, we have to emphasize that the second descent (in the context of varying the model size) appears at the left half of the curve here. Because we change the sample size while fixing the model size, the left half is the over-parameterized regime, while the right half is the under-parameterized regime. If we flip the plot horizontally, then it should look similar to those plots whose x-axis measures the model complexity (e.g. \cite{belkin2019reconciling}).\\
 
 \vspace{-3mm}
-The left subplot displays the results of simulations. The solid blue curve depicts the change of the averaged test risk. If we overlook the tiny fluctuations due to the noise, we can consider it perfectly matches with the theoratical test risk. The training risk curve is also consistent with our understanding as it keeps decreasing when the ratio $n/d$ is decreasing (from right to left on x-axis). After it enters the over-parameterized regimem, those interpolating models are guaranteed to reach zero training risk. Another interesting phenomenon is that regularization can simply fix the risk explosion problem when $n$ around $d = 200$.
+The left subplot displays the results of the simulations. The solid blue curve depicts the change of the average test risk. If we ignore the tiny fluctuations due to the noise, we can consider it perfectly matches the theoretical test risk. The training risk curve (solid red line) is also consistent with our understanding as it keeps decreasing when the ratio $n/d$ is decreasing (from right to left on the x-axis). After it enters the over-parameterized regime, those interpolating models are guaranteed to reach zero training risk. Another interesting phenomenon is that regularization can easily fix the "risk explosion" problem when $n$ is around $d = 200$. In fact, the explosion itself is very counter-intuitive as the common belief is that "More data is better", more interestingly, this is not just for linear regression. Similar things happen on deep neural networks as well reported by \cite{nakkiran2021deep}. Nevertheless, at least we know that adding an $\mathcal{L}_2$ regularization term can eliminate this problem without significantly harming the train loss (dashed red curve) and test loss (dashed blue curve) outside the area around $200$.
 
+\vspace{-5mm}
 \begin{figure}[H]
 	\centering
 	\subfloat[\centering averaged simulation results]
@@ -177,8 +178,10 @@ The left subplot displays the results of simulations. The solid blue curve depic
 	\label{fig:1}
 \end{figure}
 
-Now let's turn to analyze the results of experiment 2.
+\vspace{-5mm}
+Now let's turn to analyze the results of experiment 2 shown in Figure \ref{fig:2}. As we quickly scan through these curves, we can observe that the general trend of the test risk remains the same across different settings. If we alter the dimension $d$ of the model, the only change is that the interpolation threshold (the dashed black line) $n = d$ will be moved horizontally. For different noise intensities, it only affects the absolute level of the test risk. A bigger noise will cause a generally higher test risk at every sample size, but the trend (double descent) still remains. Notice that if the noise term is so strong (e.g., $\sigma = 1$), the noise term will dominate the change of the test risk when the bias term and variance term are both small. This is why the second descent (the descent in the over-parameterized regime) is not noticeable when $\sigma = 1$.
 
+\vspace{-5mm}
 \begin{figure}[H]
 	\centering
 	\subfloat[\centering d = 200]
